onemaxdir  = $(prefix)/phpserver/samples/onemax
dist_onemax_DATA = \
evolver.html \
index.html \
item_deme1_processed.csv \
item_deme1_processed.svgz \
item_deme1_total-processed.csv \
item_deme1_total-processed.svgz \
item_vivarium_processed.csv \
item_vivarium_processed.svgz \
item_vivarium_total-processed.csv \
item_vivarium_total-processed.svgz \
logs.html \
measure_deme1_fitness.csv \
measure_deme1_fitness.svgz \
measure_vivarium_fitness.csv \
measure_vivarium_fitness.svgz \
register.html \
stats.html \
viva0_deme_analysis_fit_simple.csv \
viva0_deme_analysis_geno_bits_covar.csv \
viva0_deme_analysis_geno_bits_params.csv \
viva0.html \
viva10_deme_analysis_fit_simple.csv \
viva10_deme_analysis_geno_bits_covar.csv \
viva10_deme_analysis_geno_bits_params.csv \
viva10.html \
viva11_deme_analysis_fit_simple.csv \
viva11_deme_analysis_geno_bits_covar.csv \
viva11_deme_analysis_geno_bits_params.csv \
viva11.html \
viva12_deme_analysis_fit_simple.csv \
viva12_deme_analysis_geno_bits_covar.csv \
viva12_deme_analysis_geno_bits_params.csv \
viva12.html \
viva13_deme_analysis_fit_simple.csv \
viva13_deme_analysis_geno_bits_covar.csv \
viva13_deme_analysis_geno_bits_params.csv \
viva13.html \
viva14_deme_analysis_fit_simple.csv \
viva14_deme_analysis_geno_bits_covar.csv \
viva14_deme_analysis_geno_bits_params.csv \
viva14.html \
viva15_deme_analysis_fit_simple.csv \
viva15_deme_analysis_geno_bits_covar.csv \
viva15_deme_analysis_geno_bits_params.csv \
viva15.html \
viva16_deme_analysis_fit_simple.csv \
viva16_deme_analysis_geno_bits_covar.csv \
viva16_deme_analysis_geno_bits_params.csv \
viva16.html \
viva17_deme_analysis_fit_simple.csv \
viva17_deme_analysis_geno_bits_covar.csv \
viva17_deme_analysis_geno_bits_params.csv \
viva17.html \
viva18_deme_analysis_fit_simple.csv \
viva18_deme_analysis_geno_bits_covar.csv \
viva18_deme_analysis_geno_bits_params.csv \
viva18.html \
viva19_deme_analysis_fit_simple.csv \
viva19_deme_analysis_geno_bits_covar.csv \
viva19_deme_analysis_geno_bits_params.csv \
viva19.html \
viva1_deme_analysis_fit_simple.csv \
viva1_deme_analysis_geno_bits_covar.csv \
viva1_deme_analysis_geno_bits_params.csv \
viva1.html \
viva20_deme_analysis_fit_simple.csv \
viva20_deme_analysis_geno_bits_covar.csv \
viva20_deme_analysis_geno_bits_params.csv \
viva20.html \
viva21_deme_analysis_fit_simple.csv \
viva21_deme_analysis_geno_bits_covar.csv \
viva21_deme_analysis_geno_bits_params.csv \
viva21.html \
viva22_deme_analysis_fit_simple.csv \
viva22_deme_analysis_geno_bits_covar.csv \
viva22_deme_analysis_geno_bits_params.csv \
viva22.html \
viva23_deme_analysis_fit_simple.csv \
viva23_deme_analysis_geno_bits_covar.csv \
viva23_deme_analysis_geno_bits_params.csv \
viva23.html \
viva24_deme_analysis_fit_simple.csv \
viva24_deme_analysis_geno_bits_covar.csv \
viva24_deme_analysis_geno_bits_params.csv \
viva24.html \
viva25_deme_analysis_fit_simple.csv \
viva25_deme_analysis_geno_bits_covar.csv \
viva25_deme_analysis_geno_bits_params.csv \
viva25.html \
viva26_deme_analysis_fit_simple.csv \
viva26_deme_analysis_geno_bits_covar.csv \
viva26_deme_analysis_geno_bits_params.csv \
viva26.html \
viva27_deme_analysis_fit_simple.csv \
viva27_deme_analysis_geno_bits_covar.csv \
viva27_deme_analysis_geno_bits_params.csv \
viva27.html \
viva28_deme_analysis_fit_simple.csv \
viva28_deme_analysis_geno_bits_covar.csv \
viva28_deme_analysis_geno_bits_params.csv \
viva28.html \
viva29_deme_analysis_fit_simple.csv \
viva29_deme_analysis_geno_bits_covar.csv \
viva29_deme_analysis_geno_bits_params.csv \
viva29.html \
viva2_deme_analysis_fit_simple.csv \
viva2_deme_analysis_geno_bits_covar.csv \
viva2_deme_analysis_geno_bits_params.csv \
viva2.html \
viva30_deme_analysis_fit_simple.csv \
viva30_deme_analysis_geno_bits_covar.csv \
viva30_deme_analysis_geno_bits_params.csv \
viva30.html \
viva31_deme_analysis_fit_simple.csv \
viva31_deme_analysis_geno_bits_covar.csv \
viva31_deme_analysis_geno_bits_params.csv \
viva31.html \
viva32_deme_analysis_fit_simple.csv \
viva32_deme_analysis_geno_bits_covar.csv \
viva32_deme_analysis_geno_bits_params.csv \
viva32.html \
viva3_deme_analysis_fit_simple.csv \
viva3_deme_analysis_geno_bits_covar.csv \
viva3_deme_analysis_geno_bits_params.csv \
viva3.html \
viva4_deme_analysis_fit_simple.csv \
viva4_deme_analysis_geno_bits_covar.csv \
viva4_deme_analysis_geno_bits_params.csv \
viva4.html \
viva5_deme_analysis_fit_simple.csv \
viva5_deme_analysis_geno_bits_covar.csv \
viva5_deme_analysis_geno_bits_params.csv \
viva5.html \
viva6_deme_analysis_fit_simple.csv \
viva6_deme_analysis_geno_bits_covar.csv \
viva6_deme_analysis_geno_bits_params.csv \
viva6.html \
viva7_deme_analysis_fit_simple.csv \
viva7_deme_analysis_geno_bits_covar.csv \
viva7_deme_analysis_geno_bits_params.csv \
viva7.html \
viva8_deme_analysis_fit_simple.csv \
viva8_deme_analysis_geno_bits_covar.csv \
viva8_deme_analysis_geno_bits_params.csv \
viva8.html \
viva9_deme_analysis_fit_simple.csv \
viva9_deme_analysis_geno_bits_covar.csv \
viva9_deme_analysis_geno_bits_params.csv \
viva9.html \
vivarium.html
