symbregdir  = $(prefix)/phpserver/samples/symbreg
dist_symbreg_DATA = \
avt.html \
evolver.html \
index.html \
item_deme1_processed.csv \
item_deme1_processed.svgz \
item_deme1_total-processed.csv \
item_deme1_total-processed.svgz \
item_vivarium_processed.csv \
item_vivarium_processed.svgz \
item_vivarium_total-processed.csv \
item_vivarium_total-processed.svgz \
logs.html \
measure_deme1_fitness.csv \
measure_deme1_fitness.svgz \
measure_deme1_treedepth.csv \
measure_deme1_treedepth.svgz \
measure_deme1_treesize.csv \
measure_deme1_treesize.svgz \
measure_vivarium_fitness.csv \
measure_vivarium_fitness.svgz \
measure_vivarium_treedepth.csv \
measure_vivarium_treedepth.svgz \
measure_vivarium_treesize.csv \
measure_vivarium_treesize.svgz \
register.html \
stats.html \
viva0_deme_analysis_fit_simple.csv \
viva0_deme_avt.svgz \
viva0.html \
viva10_deme_analysis_fit_simple.csv \
viva10_deme_avt.svgz \
viva10.html \
viva11_deme_analysis_fit_simple.csv \
viva11_deme_avt.svgz \
viva11.html \
viva1_deme_analysis_fit_simple.csv \
viva1_deme_avt.svgz \
viva1.html \
viva2_deme_analysis_fit_simple.csv \
viva2_deme_avt.svgz \
viva2.html \
viva3_deme_analysis_fit_simple.csv \
viva3_deme_avt.svgz \
viva3.html \
viva4_deme_analysis_fit_simple.csv \
viva4_deme_avt.svgz \
viva4.html \
viva5_deme_analysis_fit_simple.csv \
viva5_deme_avt.svgz \
viva5.html \
viva6_deme_analysis_fit_simple.csv \
viva6_deme_avt.svgz \
viva6.html \
viva7_deme_analysis_fit_simple.csv \
viva7_deme_avt.svgz \
viva7.html \
viva8_deme_analysis_fit_simple.csv \
viva8_deme_avt.svgz \
viva8.html \
viva9_deme_analysis_fit_simple.csv \
viva9_deme_avt.svgz \
viva9.html \
vivarium.html
